2005-05-24  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* fink.conf.5.in: added SelfUpdateCVSTrees doc

2005-05-23  Daniel Macks  <dmacks@netspace.org>

	* bootstrap.pl: Suggest the bash shell setups instead of csh.

2005-05-23  Daniel Macks  <dmacks@netspace.org>

	* fink.in, postinstall.pl.in: Roll back last commit.

2005-05-23  Daniel Macks  <dmacks@netspace.org>

	* fink.in, postinstall.pl.in: Adjust Fink:: importing to match
	what is used.

2005-05-20  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: Add notes about prebuilt binaries and version status
	given by list vs. dumpinfo. Grammar cleanups.

2005-05-16  Matthew Sachs  <msachs@apple.com>

	* postinstall.pl.in: Use ln -sf instead of ln -s
	to make the 10.4 symlink; otherwise "fink rebuild fink"
	will fail under FINK_NOTRANS since the symlink will
	already exist.

2005-05-16  Daniel Macks  <dmacks@netspace.org>

	* Makefile: 'test' target takes TESTS var to only run subset of tests

2005-05-11  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.24.6, a release
	on branch_0_24

2005-05-11  Dave Morrison  <dmrrsn@sourceforge.net> (thanks to msachs)

        * postinstall.pl.in: create 10.4 tree as a symlink to 
	10.4-transitional (temporary, until we create a real 10.4 tree)

2005-05-06  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.conf.5: Document SkipPrompts.

2005-05-05  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* lockwait.in: Set 5-minute timeout for lockwaits.

2005-05-02  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* fink.8.in, fink.conf.5.in: added documentation for 'fink plugins'

2005-04-28  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* lockwait.in: Use any dpkg/apt-get in the path
	* fink.info.in: Don't remove the finkinfodb dir, just touch a file to tell
	Fink to invalidate the current DB dir.

2005-04-27  Dave Vasilevsky  <vasi@users.sourceforge.net>
