@@ -34,7 +34,7 @@ use Fink::Services qw(&read_config &execute);
 use Fink::CLI qw(&print_breaking &prompt_boolean);
 
 use Fink::Config qw($config);
-use Fink::Configure qw($conf_file_compat_version);
+use Fink::Configure qw($conf_file_compat_version &spotlight_warning);
 
 use File::Find;
 use File::Basename;
@@ -249,6 +249,11 @@ if ($configNeedsUpdate) {
   else {
     print "Please remember to call 'fink configure' later!\n\n";
   }
+} else {
+	# Only ask if not configuring, configure will ask later
+	if (&spotlight_warning()) {
+		$config->save;
+	}
 }
 
 
